--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "file-loader": "^5.0.2",
     "glob": "^7.1.6",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.0.0-beta.11",
@@ -44,7 +45,7 @@
     "rimraf": "^3.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "ts-node": "^8.5.2",
+    "ts-node": "^8.5.4",
     "tslib": "^1.10.0",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2",
@@ -65,6 +66,6 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.7.4",
-    "core-js": "^3.4.4"
+    "core-js": "^3.4.5"
   }
 }
