--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^7.0.23",
     "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
+    "style-loader": "^1.0.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "ts-node": "^8.5.4",
