--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-multi-page",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "index.ts",
   "scripts": {
     "serve": "webpack-dev-server --env.development",
@@ -11,63 +11,65 @@
   "author": "bill",
   "license": "ISC",
   "description": "http://github.com/xuewuzhijin",
+  "dependencies": {
+    "@babel/runtime": "^7.7.6",
+    "core-js": "^3.5.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/plugin-transform-arrow-functions": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/plugin-transform-typescript": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
     "@types/compression-webpack-plugin": "^2.0.1",
     "@types/glob": "^7.1.1",
     "@types/happypack": "^5.0.0",
     "@types/html-webpack-plugin": "^3.2.1",
     "@types/mini-css-extract-plugin": "^0.8.0",
-    "@types/node": "^12.12.14",
+    "@types/node": "^12.12.21",
     "@types/webpack": "^4.41.0",
     "@types/webpack-merge": "^4.1.5",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
-    "compression-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
+    "compression-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
+    "ejs-loader": "^0.3.5",
     "file-loader": "^5.0.2",
     "glob": "^7.1.6",
     "happypack": "^5.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.11",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss": "^7.0.23",
+    "mini-css-extract-plugin": "^0.8.2",
+    "postcss": "^7.0.25",
     "postcss-loader": "^3.0.0",
     "rimraf": "^3.0.0",
-    "style-loader": "^1.0.1",
+    "style-loader": "^1.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "ts-node": "^8.5.4",
     "tslib": "^1.10.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.3",
     "url-loader": "^2.3.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.2",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-dev-server": "^3.10.0",
     "webpack-merge": "^4.2.2"
   },
   "browserslist": [
     "last 10 version",
     "> 5%",
     "IE 8"
-  ],
-  "dependencies": {
-    "@babel/runtime": "^7.7.4",
-    "core-js": "^3.4.5"
-  }
+  ]
 }
